# src/controllers/orderController.js
@@ -1,76 +1,142 @@
 import expressAsyncHandler from "express-async-handler";
 import Order from "../models/orderModel.js";
+import Stripe from "stripe";
+import User from "../models/userModel.js";
+import { createOrderSchema, validator } from "../utils/validations/index.js";
+import dotenv from "dotenv";
+dotenv.config();
+
+const stripe = Stripe(process.env.STRIPE_SECRET_KEY);
 
 // @desc Create new order
 // @route POST /api/orders
 // @access Private
-export const addOrderItems = expressAsyncHandler(async (req, res) => {
-  const {
-    orderItems,
-    shippingAddress,
-    paymentMethod,
-    itemsPrice,
-    taxPrice,
-    shippingPrice,
-    totalPrice,
-  } = req.body;
+export const createOrder = expressAsyncHandler(async (req, res) => {
+  try {
+    await validator(createOrderSchema, req.body);
+    const { address, city, postalCode, country } = req.body;
+    const shippingAddress = { address, city, postalCode, country };
+    const user = await User.findById(req.user._id).select("-password");
+    const cart = user.cart;
+    const orderItems = cart.items;
 
-  if (orderItems && !orderItems.length) {
+    if (orderItems && !orderItems.length) {
+      res.status(400);
+      throw new Error("Cart is empty");
+    }
+
+    const itemsPrice = user.cart.totalPrice;
+    const taxPrice = user.cart.totalPrice * 0.05;
+    const totalPrice = itemsPrice + taxPrice;
+    const paymentMethod = "stripe";
+
+    const order = new Order({
+      user: req.user._id,
+      orderItems,
+      shippingAddress,
+      paymentMethod,
+      itemsPrice,
+      taxPrice,
+      totalPrice,
+    });
+
+    const createdOrder = await order.save();
+
+    user.cart = {
+      items: [],
+      totalQty: [],
+      totalPrice: 0,
+    };
+    await user.save();
+
+    const params = {
+      payment_method_types: ["card"],
+      amount: (totalPrice * 100).toFixed(0),
+      currency: "usd",
+      metadata: {
+        orderId: `${createdOrder._id}`,
+      },
+    };
+
+    const paymentIntent = await stripe.paymentIntents.create(params);
+
+    createdOrder.clientSecret = paymentIntent.client_secret;
+
+    await createdOrder.save();
+
+    res.status(201).json({
+      clientSecret: paymentIntent.client_secret,
+      order: createdOrder,
+    });
+  } catch (e) {
     res.status(400);
-    throw new Error("No order items");
+    throw new Error(e.message);
+  }
+});
+
+/*
+ * stripe login
+ * stripe listen --forward-to localhost:5000/api/orders/payment-webhook
+ * stripe trigger payment_intent.succeeded
+ * */
+
+// @desc Create new order
+// @route POST /api/orders/payment-webhook
+// @access Public
+export const paymentWebhook = expressAsyncHandler(async (request, response) => {
+  const sig = request.headers["stripe-signature"];
+
+  let event;
+
+  try {
+    event = stripe.webhooks.constructEvent(
+      request.rawBody,
+      sig,
+      "whsec_8v7Z4KtN1wE7479ZVj2lc1GyLdlxCDyK"
+      //process.env.STRIPE_WEBHOOK_SECRET_KEY
+    );
+  } catch (err) {
+    console.log(`Webhook Error: ${err.message}`);
+    response.status(400).send(`Webhook Error: ${err.message}`);
+    return;
   }
 
-  const order = new Order({
-    user: req.user._id,
-    orderItems,
-    shippingAddress,
-    paymentMethod,
-    itemsPrice,
-    taxPrice,
-    shippingPrice,
-    totalPrice,
-  });
+  let paymentIntent;
+  // Handle the event
+  switch (event.type) {
+    case "payment_intent.created":
+      paymentIntent = event.data.object;
+      break;
+    case "payment_intent.succeeded":
+      paymentIntent = event.data.object;
+      // Then define and call a function to handle the event payment_intent.succeeded
+      const order = await Order.findById(request.params.id);
 
-  const createdOrder = await order.save();
+      if (order) {
+        order.isPaid = true;
+        order.paidAt = Date.now();
+        const updatedOrder = await order.save();
+      }
+      break;
+    default:
+      console.log(`Unhandled event type ${event.type}`);
+  }
 
-  res.status(201).json(createdOrder);
+  // Return a 200 response to acknowledge receipt of the event
+  response.send();
 });
 
 // @desc Fetch a single order
 // @route Get /api/orders/:id
 // @access Private
 export const getOrderByID = expressAsyncHandler(async (req, res) => {
-  const order = await Order.findById(req.params.id).populate(
-    "user",
-    "name email"
-  );
+  const order = await Order.findById(req.params.id)
+    .populate("user", "firstName lastName email")
+    .populate("orderItems.product")
+    .exec();
 
   if (order) res.json(order);
   else {
-    res.status(404);
-    throw new Error("Order not found");
-  }
-});
-
-// @desc Update a single order to paid
-// @route put /api/orders/:id/pay
-// @access Private
-export const updateOrderToPaid = expressAsyncHandler(async (req, res) => {
-  const order = await Order.findById(req.params.id);
-
-  if (order) {
-    order.isPaid = true;
-    order.paidAt = Date.now();
-    order.paymentResult = {
-      id: req.body.id,
-      status: req.body.status,
-      update_time: req.body.update_time,
-      email_address: req.body.email_address,
-    };
-
-    const updatedOrder = await order.save();
-    res.json(updatedOrder);
-  } else {
     res.status(404);
     throw new Error("Order not found");
   }
@@ -98,22 +164,30 @@ export const updateOrderToDelivered = expressAsyncHandler(async (req, res) => {
 // @route get /api/orders/myorders
 // @access Private
 export const getUserOrders = expressAsyncHandler(async (req, res) => {
-  const orders = await Order.find({
-    user: req.user._id,
-  });
+  const pageSize = 12;
+  const page = Number(req.query.pageNumber) || 1;
 
-  if (orders) {
-    res.json(orders);
-  } else {
-    res.status(404);
-    throw new Error("Order not found");
-  }
+  const count = await Order.countDocuments();
+  const orders = await Order.find()
+    .populate("orderItems.product")
+    .limit(pageSize)
+    .skip(pageSize * (page - 1));
+
+  res.json({ orders, page, pages: Math.ceil(count / pageSize) });
 });
 
 // @desc Fetch orders
 // @route GET /api/orders
 // @access Private/Admin
 export const getOrders = expressAsyncHandler(async (req, res) => {
-  const orders = await Order.find({}).populate("user", "name email");
-  if (orders) res.json(orders);
+  const pageSize = 12;
+  const page = Number(req.query.pageNumber) || 1;
+
+  const count = await Order.countDocuments();
+  const orders = await Order.find()
+    .populate("user", "firstName lastName email")
+    .limit(pageSize)
+    .skip(pageSize * (page - 1));
+
+  res.json({ orders, page, pages: Math.ceil(count / pageSize) });
 });
